tests/models/enum/named/f32/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = 1)]
        value: f32
    },
}
fn main() {}
